--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fedorenkosergiy.Grabli.EditorConfig",
-  "version": "0.0.1",
+  "name": "fedorenkosergiy.grabli.editorconfig",
+  "version": "0.0.2",
   "displayName": "Grabli.EditorConfig",
   "description": "Editor config for Unity packages",
   "unity": "2020.3",
