--- a/.editorconfig
+++ b/.editorconfig
@@ -16,8 +16,6 @@ max_line_length = 120
 
 ;________________________NAMING
 
-#Visual Studio
-
 ##########
 # STYLES #
 ##########
@@ -85,8 +83,6 @@ dotnet_naming_rule.parameter_and_local_rule.severity = error
 
 ;________________________SYNTAX
 
-#JetBrains Rider IDE
-
 #blank lines
 resharper_csharp_blank_lines_around_region = 2
 resharper_csharp_blank_lines_inside_region = 0
@@ -133,3 +129,57 @@ resharper_csharp_indent_inside_namespace = true
 resharper_csharp_use_continuous_indent_inside_initializer_braces = true
 resharper_csharp_allow_comment_after_lbrace = false
 resharper_csharp_empty_block_style = together_same_line
+
+#syntax style
+resharper_csharp_for_built_in_types = use_explicit_type
+resharper_csharp_for_simple_types = use_explicit_type
+resharper_csharp_for_other_types = use_explicit_type
+resharper_csharp_use_roslyn_logic_for_evident_types = false
+resharper_csharp_prefer_separate_deconstructed_variables_declaration = false
+resharper_csharp_prefer_explicit_discard_declaration = true
+resharper_csharp_instance_members_qualify_members = none
+resharper_csharp_instance_members_qualify_declared_in = base_class
+resharper_csharp_static_members_qualify_with = declared_type
+resharper_csharp_static_members_qualify_members = all
+resharper_csharp_builtin_type_reference_style = use_keyword
+resharper_csharp_builtin_type_reference_for_member_access_style = use_keyword
+resharper_csharp_prefer_qualified_reference = true
+resharper_csharp_add_imports_to_deepest_scope = true
+resharper_csharp_sort_usings_with_system_first = false
+resharper_csharp_qualified_using_at_nested_scope = true
+resharper_csharp_allow_alias = true
+resharper_csharp_can_use_global_alias = true
+resharper_csharp_default_private_modifier = explicit
+resharper_csharp_default_internal_modifier = explicit
+csharp_preferred_modifier_order = public, private, protected, internal,static,extern,new,virtual,abstract,sealed,override,readonly,unsafe,volatile,async:warning
+resharper_csharp_arguments_skip_single = true
+resharper_csharp_arguments_literal = positional
+resharper_csharp_arguments_named = positional
+resharper_csharp_arguments_anonymous_function = positional
+resharper_csharp_arguments_other = positional
+resharper_csharp_parentheses_redundancy_style = remove
+resharper_csharp_parentheses_non_obvious_operations = none
+resharper_csharp_parentheses_group_non_obvious_operations = none
+resharper_csharp_parentheses_same_type_operations = false
+resharper_csharp_braces_for_ifelse = required
+resharper_csharp_braces_for_for = required
+resharper_csharp_braces_for_foreach = required
+resharper_csharp_braces_for_while = required
+resharper_csharp_braces_for_dowhile = required
+resharper_csharp_braces_for_using = required
+resharper_csharp_braces_for_lock = required
+resharper_csharp_braces_for_fixed = required
+resharper_csharp_braces_redundant = true
+resharper_csharp_method_or_operator_body = expression_body
+resharper_csharp_local_function_body = block_body
+resharper_csharp_constructor_or_destructor_body = expression_body
+resharper_csharp_accessor_owner_body = expression_body
+resharper_csharp_namespace_body = file_scoped
+resharper_csharp_use_heuristics_for_body_style = false
+resharper_csharp_force_attribute_style = join
+resharper_csharp_trailing_comma_in_multiline_lists = true
+resharper_csharp_trailing_comma_in_singleline_lists = false
+resharper_csharp_object_creation_when_type_evident = explicitly_typed
+resharper_csharp_object_creation_when_type_not_evident = explicitly_typed
+resharper_csharp_default_value_when_type_evident = default_literal
+resharper_csharp_default_value_when_type_not_evident = default_literal
