--- a/.editorconfig
+++ b/.editorconfig
@@ -183,3 +183,71 @@ resharper_csharp_object_creation_when_type_evident = explicitly_typed
 resharper_csharp_object_creation_when_type_not_evident = explicitly_typed
 resharper_csharp_default_value_when_type_evident = default_literal
 resharper_csharp_default_value_when_type_not_evident = default_literal
+
+resharper_csharp_indent_style = tab
+resharper_csharp_indent_size = 4
+resharper_csharp_tab_width = 0
+resharper_csharp_continuous_indent_multiplier = 0
+resharper_csharp_indent_nested_usings_stmt = true
+resharper_csharp_indent_nested_fixed_stmt = true
+resharper_csharp_indent_nested_lock_stmt = true
+resharper_csharp_indent_nested_for_stmt = true
+resharper_csharp_indent_nested_foreach_stmt = true
+resharper_csharp_indent_nested_while_stmt = true
+resharper_csharp_use_continuous_indent_inside_parens = true
+resharper_csharp_indent_method_decl_pars = inside
+resharper_csharp_indent_invocation_pars = inside
+resharper_csharp_indent_statement_pars = inside
+resharper_csharp_indent_typeparam_angles = inside
+resharper_csharp_indent_typearg_angles = inside
+resharper_csharp_indent_pars = inside
+resharper_csharp_indent_preprocessor_if = no_indent
+resharper_csharp_indent_preprocessor_region = usual_indent
+resharper_csharp_indent_preprocessor_other = usual_indent
+csharp_indent_switch_labels = true
+resharper_csharp_outdent_statement_labels = false
+resharper_csharp_indent_type_constraints = false
+resharper_csharp_stick_comment = false
+resharper_csharp_place_comments_at_first_column = false
+resharper_csharp_use_indent_from_previous_element = true
+resharper_csharp_indent_braces_inside_statement_conditions = false
+resharper_csharp_alignment_tab_fill_style = optimal_fill
+resharper_csharp_allow_far_alignment = true
+resharper_csharp_align_multiline_parameter = true
+resharper_csharp_align_multiline_extends_list = true
+resharper_csharp_align_linq_query = true
+resharper_csharp_align_multiline_binary_expressions_chain = true
+resharper_csharp_outdent_binary_ops = false
+resharper_csharp_align_multiline_calls_chain = true
+resharper_csharp_outdent_dots = true
+resharper_csharp_align_multiline_array_and_object_initializer = false
+resharper_csharp_align_multiline_switch_expression = false
+resharper_csharp_align_multiline_property_pattern = false
+resharper_csharp_align_multiline_list_pattern = false
+resharper_csharp_align_multiline_binary_patterns = true
+resharper_csharp_outdent_binary_pattern_ops = true
+resharper_csharp_indent_anonymous_method_block = false
+resharper_csharp_align_first_arg_by_paren = true
+resharper_csharp_align_multiline_argument = true
+resharper_csharp_align_tuple_components = true
+resharper_csharp_align_multiline_expression = true
+resharper_csharp_align_multiline_statement_conditions = true
+resharper_csharp_align_multiline_for_stmt = true
+resharper_csharp_align_multiple_declaration = true
+resharper_csharp_align_multline_type_parameter_list = true
+resharper_csharp_align_multline_type_parameter_constrains = true
+resharper_csharp_outdent_commas = true
+resharper_csharp_int_align_fix_in_adjacent = false
+resharper_csharp_int_align_fields = false
+resharper_csharp_int_align_properties = false
+resharper_csharp_int_align_methods = false
+resharper_csharp_int_align_parameters = false
+resharper_csharp_int_align_variables = false
+resharper_csharp_int_align_assignments = false
+resharper_csharp_int_align_property_patterns = false
+resharper_csharp_int_align_nested_ternary = false
+resharper_csharp_int_align_invocations = false
+resharper_csharp_int_align_binary_expressions = false
+resharper_csharp_int_align_comments = false
+resharper_csharp_int_align_switch_sections = false
+resharper_csharp_int_align_switch_expressions = false
