--- a/.editorconfig
+++ b/.editorconfig
@@ -184,6 +184,7 @@ resharper_csharp_object_creation_when_type_not_evident = explicitly_typed
 resharper_csharp_default_value_when_type_evident = default_literal
 resharper_csharp_default_value_when_type_not_evident = default_literal
 
+#indents, aligns
 resharper_csharp_indent_style = tab
 resharper_csharp_indent_size = 4
 resharper_csharp_tab_width = 0
@@ -251,3 +252,208 @@ resharper_csharp_int_align_binary_expressions = false
 resharper_csharp_int_align_comments = false
 resharper_csharp_int_align_switch_sections = false
 resharper_csharp_int_align_switch_expressions = false
+
+#line breaks
+resharper_csharp_keep_user_linebreaks = false
+resharper_csharp_max_line_length = 120
+resharper_csharp_wrap_before_comma = false
+resharper_csharp_wrap_before_eq = false
+resharper_csharp_special_else_if_treatment = true
+resharper_csharp_insert_final_newline = true
+resharper_csharp_max_attribute_length_for_same_line = 40
+resharper_csharp_keep_existing_attribute_arrangement = false
+resharper_csharp_place_type_attribute_on_same_line = if_owner_is_single_line
+resharper_csharp_place_method_attribute_on_same_line = never
+resharper_csharp_place_accessorholder_attribute_on_same_line = never
+resharper_csharp_place_accessor_attribute_on_same_line = if_owner_is_single_line
+resharper_csharp_place_field_attribute_on_same_line = if_owner_is_single_line
+resharper_csharp_place_record_field_attribute_on_same_line = always
+resharper_csharp_wrap_parameters_style = chop_if_long
+resharper_csharp_max_formal_parameters_on_line = 5
+resharper_csharp_keep_existing_declaration_parens_arrangement = false
+resharper_csharp_wrap_before_declaration_lpar = false
+resharper_csharp_wrap_after_declaration_lpar = false
+resharper_csharp_wrap_before_declaration_rpar = false
+resharper_csharp_place_constructor_initializer_on_same_line = true
+resharper_csharp_keep_existing_expr_member_arrangement = false
+resharper_csharp_place_expr_method_on_single_line = if_owner_is_single_line
+resharper_csharp_place_expr_property_on_single_line = if_owner_is_single_line
+resharper_csharp_place_expr_accessor_on_single_line = if_owner_is_single_line
+resharper_csharp_wrap_before_arrow_with_expressions = false
+resharper_csharp_place_type_constraints_on_same_line = true
+resharper_csharp_wrap_before_first_type_parameter_constraint = false
+resharper_csharp_wrap_multiple_type_parameter_constraints_style = chop_if_long
+resharper_csharp_wrap_before_type_parameter_langle = false
+resharper_csharp_wrap_before_extends_colon = false
+resharper_csharp_wrap_extends_list_style = wrap_if_long
+resharper_csharp_keep_existing_declaration_block_arrangement = false
+resharper_csharp_place_abstract_accessorholder_on_single_line = true
+resharper_csharp_place_simple_accessorholder_on_single_line = false
+resharper_csharp_place_accessor_with_attrs_holder_on_single_line = false
+resharper_csharp_place_simple_accessor_on_single_line = true
+resharper_csharp_place_simple_method_on_single_line = true
+resharper_csharp_keep_existing_enum_arrangement = false
+resharper_csharp_max_enum_members_on_line = 1
+resharper_csharp_place_simple_enum_on_single_line = false
+resharper_csharp_wrap_enum_declaration = chop_always
+csharp_new_line_before_else = true
+resharper_csharp_new_line_before_while = true
+csharp_new_line_before_catch = true
+csharp_new_line_before_finally = true
+resharper_csharp_wrap_for_stmt_header_style = chop_if_long
+resharper_csharp_wrap_multiple_declaration_style = chop_always
+resharper_csharp_keep_existing_embedded_arrangement = false
+resharper_csharp_place_simple_embedded_statement_on_same_line = if_owner_is_single_line
+resharper_csharp_place_simple_case_statement_on_same_line = if_owner_is_single_line
+resharper_csharp_keep_existing_embedded_block_arrangement = false
+resharper_csharp_place_simple_embedded_block_on_same_line = true
+resharper_csharp_place_simple_anonymousmethod_on_single_line = true
+resharper_csharp_keep_existing_switch_expression_arrangement = false
+resharper_csharp_place_simple_switch_expression_on_single_line = false
+resharper_csharp_wrap_switch_expression = chop_always
+resharper_csharp_keep_existing_property_patterns_arrangement = false
+resharper_csharp_place_simple_property_pattern_on_single_line = true
+resharper_csharp_wrap_property_pattern = chop_if_long
+resharper_csharp_keep_existing_list_patterns_arrangement = false
+resharper_csharp_place_simple_list_pattern_on_single_line = true
+resharper_csharp_wrap_list_pattern = wrap_if_long
+resharper_csharp_keep_existing_initializer_arrangement = false
+resharper_csharp_place_simple_initializer_on_single_line = true
+resharper_csharp_max_initializer_elements_on_line = 1
+resharper_csharp_wrap_object_and_collection_initializer_style = chop_if_long
+resharper_csharp_max_array_initializer_elements_on_line = 4
+resharper_csharp_wrap_array_initializer_style = wrap_if_long
+resharper_csharp_wrap_arguments_style = chop_if_long
+resharper_csharp_max_invocation_arguments_on_line = 5
+resharper_csharp_keep_existing_invocation_parens_arrangement = false
+resharper_csharp_wrap_before_invocation_lpar = false
+resharper_csharp_wrap_before_invocation_rpar = false
+resharper_csharp_wrap_after_dot_in_method_calls = false
+resharper_csharp_wrap_chained_method_calls = chop_if_long
+resharper_csharp_wrap_before_binary_opsign = false
+resharper_csharp_wrap_chained_binary_expressions = chop_if_long
+resharper_csharp_wrap_before_binary_pattern_op = true
+resharper_csharp_wrap_chained_binary_patterns = chop_if_long
+resharper_csharp_force_chop_compound_if_expression = false
+resharper_csharp_force_chop_compound_while_expression = false
+resharper_csharp_force_chop_compound_do_expression = false
+resharper_csharp_wrap_before_ternary_opsigns = true
+resharper_csharp_wrap_ternary_expr_style = chop_if_long
+resharper_csharp_nested_ternary_style = expanded
+resharper_csharp_wrap_linq_expressions = chop_if_long
+resharper_csharp_wrap_before_linq_expression = false
+resharper_csharp_place_linq_into_on_new_line = false
+resharper_csharp_wrap_verbatim_interpolated_strings = wrap_if_long
+resharper_csharp_old_engine = false
+
+resharper_csharp_extra_spaces = remove_all
+csharp_space_after_keywords_in_control_flow_statements = true
+resharper_csharp_space_before_if_parentheses = true
+resharper_csharp_space_before_while_parentheses = true
+resharper_csharp_space_before_catch_parentheses = true
+resharper_csharp_space_before_switch_parentheses = true
+resharper_csharp_space_before_for_parentheses = true
+resharper_csharp_space_before_foreach_parentheses = true
+resharper_csharp_space_before_using_parentheses = true
+resharper_csharp_space_before_lock_parentheses = true
+resharper_csharp_space_before_fixed_parentheses = true
+csharp_space_between_method_call_name_and_opening_parenthesis = false
+resharper_csharp_space_before_method_call_parentheses = false
+resharper_csharp_space_before_empty_method_call_parentheses = false
+resharper_csharp_space_before_method_parentheses = false
+resharper_csharp_space_before_empty_method_parentheses = false
+resharper_csharp_space_before_typeof_parentheses = false
+resharper_csharp_space_before_default_parentheses = false
+resharper_csharp_space_before_checked_parentheses = false
+resharper_csharp_space_before_sizeof_parentheses = false
+resharper_csharp_space_before_nameof_parentheses = false
+resharper_csharp_space_before_new_parentheses = true
+resharper_csharp_space_between_keyword_and_expression = true
+resharper_csharp_space_between_keyword_and_type = true
+resharper_csharp_space_within_if_parentheses = false
+resharper_csharp_space_within_while_parentheses = false
+resharper_csharp_space_within_catch_parentheses = false
+resharper_csharp_space_within_switch_parentheses = false
+resharper_csharp_space_within_for_parentheses = false
+resharper_csharp_space_within_foreach_parentheses = false
+resharper_csharp_space_within_using_parentheses = false
+resharper_csharp_space_within_lock_parentheses = false
+resharper_csharp_space_within_fixed_parentheses = false
+resharper_csharp_space_within_parentheses = false
+resharper_csharp_space_between_typecast_parentheses = false
+csharp_space_between_method_declaration_parameter_list_parentheses = false
+resharper_space_between_method_declaration_parameter_list_parentheses = false
+resharper_space_between_method_declaration_empty_parameter_list_parentheses = false
+csharp_space_between_method_call_parameter_list_parentheses = false
+resharper_space_between_method_call_parameter_list_parentheses = false
+resharper_space_between_method_call_empty_parameter_list_parentheses = false
+resharper_csharp_space_within_typeof_parentheses = false
+resharper_csharp_space_within_default_parentheses = false
+resharper_csharp_space_within_checked_parentheses = false
+resharper_csharp_space_within_sizeof_parentheses = false
+resharper_csharp_space_within_nameof_parentheses = false
+resharper_csharp_space_within_new_parentheses = false
+csharp_space_before_open_square_brackets = false
+resharper_csharp_space_before_array_access_brackets = false
+resharper_csharp_space_before_array_rank_brackets = false
+csharp_space_between_square_brackets = false
+resharper_csharp_space_within_array_access_brackets = false
+resharper_csharp_space_within_list_pattern_brackets = false
+resharper_csharp_space_within_array_rank_brackets = false
+csharp_space_between_empty_square_brackets = false
+resharper_csharp_space_within_array_rank_empty_brackets = false
+resharper_csharp_space_before_type_parameter_angle = false
+resharper_csharp_space_before_type_argument_angle = false
+resharper_csharp_space_within_type_parameter_angles = false
+resharper_csharp_space_within_type_argument_angles = false
+resharper_csharp_space_before_singleline_accessorholder = true
+resharper_csharp_space_in_singleline_accessorholder = true
+resharper_csharp_space_between_accessors_in_singleline_property = true
+resharper_csharp_space_within_empty_braces = true
+resharper_csharp_space_in_singleline_method = true
+resharper_csharp_space_in_singleline_anonymous_method = true
+resharper_csharp_space_within_single_line_array_initializer_braces = true
+resharper_csharp_space_around_assignment_op = true
+resharper_csharp_space_around_logical_op = true
+resharper_csharp_space_around_equality_op = true
+resharper_csharp_space_around_relational_op = true
+resharper_csharp_space_around_bitwise_op = true
+resharper_csharp_space_around_additive_op = true
+resharper_csharp_space_around_multiplicative_op = true
+resharper_csharp_space_around_shift_op = true
+resharper_csharp_space_around_nullcoalescing_op = true
+resharper_csharp_space_around_arrow_op = false
+resharper_csharp_space_after_logical_not_op = false
+resharper_csharp_space_after_unary_minus_op = false
+resharper_csharp_space_after_unary_plus_op = false
+resharper_csharp_space_after_ampersand_op = false
+resharper_csharp_space_after_asterik_op = false
+resharper_csharp_space_near_postfix_and_prefix_op = false
+resharper_csharp_space_before_ternary_quest = true
+resharper_csharp_space_after_ternary_quest = true
+resharper_csharp_space_before_ternary_colon = true
+resharper_csharp_space_after_ternary_colon = true
+csharp_space_before_comma = false
+csharp_space_after_comma = true
+csharp_space_before_semicolon_in_for_statement = false
+csharp_space_after_semicolon_in_for_statement = true
+resharper_csharp_space_before_semicolon = false
+csharp_space_before_colon_in_inheritance_clause = true
+csharp_space_after_colon_in_inheritance_clause = true
+resharper_csharp_space_before_type_parameter_constraint_colon = true
+resharper_csharp_space_after_type_parameter_constraint_colon = true
+resharper_csharp_space_before_colon_in_case = false
+resharper_csharp_space_after_colon_in_case = true
+resharper_csharp_space_before_attribute_colon = false
+resharper_csharp_space_after_attribute_colon = true
+resharper_csharp_space_between_attribute_sections = false
+resharper_csharp_space_within_attribute_brackets = false
+resharper_csharp_space_after_attributes = true
+csharp_space_after_cast = false
+resharper_csharp_space_around_dot = false
+resharper_csharp_space_around_lambda_arrow = true
+resharper_csharp_space_before_pointer_asterik_declaration = false
+resharper_csharp_space_before_nullable_mark = false
+resharper_csharp_space_around_alias_eq = true
+resharper_csharp_space_before_trailing_comment = true
+resharper_csharp_space_after_operator_keyword = true
