changed static fields settings

--- a/.editorconfig
+++ b/.editorconfig
@@ -139,8 +139,8 @@ resharper_csharp_prefer_separate_deconstructed_variables_declaration = false
 resharper_csharp_prefer_explicit_discard_declaration = true
 resharper_csharp_instance_members_qualify_members = none
 resharper_csharp_instance_members_qualify_declared_in = base_class
-resharper_csharp_static_members_qualify_with = declared_type
-resharper_csharp_static_members_qualify_members = all
+resharper_csharp_static_members_qualify_with = current_type
+resharper_csharp_static_members_qualify_members = none
 resharper_csharp_builtin_type_reference_style = use_keyword
 resharper_csharp_builtin_type_reference_for_member_access_style = use_keyword
 resharper_csharp_prefer_qualified_reference = true
